# ultimate-dj

./: .gitignore  CHANGELOG.md  CLAUDE.md  GUIDE.md  LICENSE  README.md  UltimateDJ.bat  _check_parse.py  build.bat  build_share.py  pyproject.toml  requirements.txt  run.py  train_transition_model.py  ultimate_dj.spec
.claude/: settings.json
.claude/agents/: dj-architect.md
.github/workflows/: ci.yml
app/: __init__.py  config.py  deps.py  logger.py  secrets_store.py
app/engine/: analyzer.py  backup.py  cooccurrence.py  discovery.py  downloader.py  embeddings.py  export.py  feedback.py  fma.py  library.py  live.py  player.py  playlist_sync.py  rekordbox_bridge.py  repair.py  segmentation.py  setlist_fm.py  spotify.py  tasks.py  tracklists.py  training_pipeline.py  transition_model.py
app/ui/: _browser_launcher.py  activity_tray.py  analyze.py  app.py  browser.py  camelot.py  deck.py  discover.py  download.py  duplicates.py  export_dialog.py  fastlist.py  helpers.py  home.py  library.py  live.py  mixer.py  setlist.py  settings.py  toast.py  track_editor.py
app/ui/settings/: __init__.py  _ai_sections.py  _ai_workers.py  _general.py  _maintenance.py  page.py
docs/: AUDIT.md  ECC_USAGE.md  LAUNCH_PLAN.md  PLAN_CHANTIERS.md  PROJECT_MAP.html  PROJECT_MAP.md
tests/: test_engine.py  test_repair_v2.py  test_smoke.py
